update categorie show

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,8 +41,13 @@
 
 
         <% if current_user %>
+
           <a class="button  is-info is-outlined is-large ">
-  Hi, <%= current_user.name %></a>
+
+            Hi, <%= current_user.name %>
+            </a>
+
+
           <!-- 跟登入的使用者打招呼 -->
         <% end %>
 
