--- a/app/views/shared/_dessert_list.html.erb
+++ b/app/views/shared/_dessert_list.html.erb
@@ -1,9 +1,17 @@
+<style>
+.smallpic{
+  width:20px;
+  height:20px;
+}
+</style>
 <div class="item-box col-md-12 " style= height=900px;>
   <% @desserts.each do |dessert| %>
     <div class="wrapper col-md-4">
 
       <%= link_to dessert_path(dessert) do %>
+
         <%= image_tag dessert.image_url(:thumb) if dessert.image? %>
+
       <% end %>
 
       <div class="overlay">
@@ -11,7 +19,7 @@
           <%= link_to dessert_path(dessert) do %>
 
             <%= dessert.name %><br>
-            
+
             <% if dessert.amount != 0 && Time.now < dessert.excess_time %>
               集資倒數 <%= distance_of_time_in_words(Time.now, dessert.excess_time) %>
             <% else %>
