--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -27,7 +27,7 @@ body {
     background-size: 200% 100% !important;
     animation: move 10s ease infinite;
     transform: translate3d(0, 0, 0);
-    background: linear-gradient(45deg, #f7cae6 10%, #A2C7E5 90%);
+    background: linear-gradient(45deg, #d6b6d5 10%, #f7b75d 90%);
     height: 150vh
 }
 
