--- a/app/views/desserts/new.html.erb
+++ b/app/views/desserts/new.html.erb
@@ -1,14 +1,154 @@
+<script>
+const button = document.querySelector('.btn')
+const form   = document.querySelector('.form')
+
+button.addEventListener('click', function() {
+   form.classList.add('form--no')
+});
+</script>
+
+
 <style>
+
+$font-family:   "Roboto";
+$font-size:     14px;
+
+$color-primary: #ABA194;
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: $font-family;
+    font-size: $font-size;
+    background-size: 200% 100% !important;
+    animation: move 10s ease infinite;
+    transform: translate3d(0, 0, 0);
+    background: linear-gradient(45deg, #f7cae6 10%, #A2C7E5 90%);
+    height: 100vh
+}
+
+.user {
+    width: 90%;
+    max-width: 340px;
+    margin: 10vh auto;
+}
+
+.user__header {
+    text-align: center;
+    opacity: 0;
+    transform: translate3d(0, 500px, 0);
+    animation: arrive 500ms ease-in-out 0.7s forwards;
+}
+
+.user__title {
+    font-size: $font-size;
+    margin-bottom: -10px;
+    font-weight: 500;
+    color: white;
+}
+
+.form {
+    margin-top: 40px;
+    border-radius: 6px;
+    overflow: hidden;
+    opacity: 0;
+    transform: translate3d(0, 500px, 0);
+    animation: arrive 500ms ease-in-out 0.9s forwards;
+}
+
+.form--no {
+    animation: NO 1s ease-in-out;
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+}
+
+.form__input {
+    display: block;
+    width: 100%;
+    padding: 20px;
+    font-family: $font-family;
+    -webkit-appearance: none;
+    border: 0;
+    outline: 0;
+    transition: 0.3s;
+
+    &:focus {
+        background: darken(#fff, 3%);
+    }
+}
+
+.btn {
+    display: block;
+    width: 100%;
+    padding: 20px;
+    font-family: $font-family;
+    -webkit-appearance: none;
+    outline: 0;
+    border: 0;
+    color: white;
+    background: $color-danger;
+    transition: 0.3s;
+
+    &:hover {
+        background: darken($color-danger, 5%);
+    }
+}
+
+@keyframes NO {
+  from, to {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+
+  10%, 30%, 50%, 70%, 90% {
+    -webkit-transform: translate3d(-10px, 0, 0);
+    transform: translate3d(-10px, 0, 0);
+  }
+
+  20%, 40%, 60%, 80% {
+    -webkit-transform: translate3d(10px, 0, 0);
+    transform: translate3d(10px, 0, 0);
+  }
+}
+
+@keyframes arrive {
+    0% {
+        opacity: 0;
+        transform: translate3d(0, 50px, 0);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
+    }
+}
+
+@keyframes move {
+    0% {
+        background-position: 0 0
+    }
+
+    50% {
+        background-position: 100% 0
+    }
+
+    100% {
+        background-position: 0 0
+    }
+}
+
     input[type="submit"]{padding:5px 15px; background:#ccc; border:0 none;
 cursor:pointer;
 -webkit-border-radius: 5px;
 border-radius: 5px; }
-
     input[type="text"]{padding:5px 15px; border:2px black solid;
 cursor:pointer;
 -webkit-border-radius: 5px;
 border-radius: 5px; }
-
 .demo .container2{
     padding-top: 50px;
     text-align: center
@@ -16,11 +156,12 @@ border-radius: 5px; }
 </style>
 
 
-<div class="container">
+<div class="user">
+
 
   <!-- 錯誤訊息 -->
   <% if @dessert.errors.any? %>
-    <h2>We have some errors here !</h2>
+    <h3>We have some errors here !</h3>
     <ul>
       <% @dessert.errors.full_messages.each do |message| %>
         <li><%= message %></li>
@@ -33,124 +174,29 @@ border-radius: 5px; }
 
     <p><%= f.label :name, '甜點名稱' %></p>
     <p><%= f.text_field :name %></p>
-
-    <br>
-
     <p><%= f.label :image, "甜點照片" %></p>
     <p><%= f.file_field :image %></p>
-    
     <p>或在此貼上甜點照片的ig網址</p>
     <p><%= f.text_field :ig_image_url %></p>
-
-    <br>
-
     <p><%= f.label :price, '單價' %></p>
     <p><%= f.number_field :price %></p>
-
-    <br>
-
     <p><%= f.label :amount, '販售數量' %></p>
     <p><%= f.number_field :amount %></p>
-
-    <br>
-
     <p><%= f.label :category, "地區" %></p>
     <p><%= f.collection_select :category_id, Category.all, :id, :area, {}, {} %></p>
-
-    <br>
-
     <p><%= f.label :location, "面交地點" %></p>
     <p><%= f.text_field :location %></p>
-
-    <br>
-    
     <p><%= f.label :description, '甜點介紹' %></p>
     <p><%= f.text_area :description %></p>
-
-    <br>
-
     <p><%= f.label :production_time, '製作所需時間' %></p>
     <p><%= f.text_field :production_time %></p>
-
-<<<<<<< HEAD
-</script>
-</box>
-
-<% if @dessert.errors.any? %>
-  <h2>We have some errors here !</h2>
-  <ul>
-    <% @dessert.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-  </ul>
-<% end %>
-
-
-  <%= f.label :name, 'Name   ' %>
-  <br>
-  <%= f.text_field :name %>
-
-  <br>
-
-  <%= f.label :price, 'Price   ' %>
-  <br>
-
-  或在此貼上你甜點照片的ig網址
-  <%= f.text_field :ig_image_url %>
-  <br>
-  <%= f.label :price, 'Price' %>
-  <%= f.number_field :price %>
-  <br>
-  <%= f.label :amount, 'Amount' %>
-  <%= f.number_field :amount %>
-
-  <br>
-  <%= f.label :category, "Area   " %>
-  <br>
-  <%= f.collection_select :category_id, Category.all, :id, :area, {}, {} %>
-  <br>
-  <%= f.label :location, "Location   " %>
-  <br>
-  <%= f.text_field :location %>
-  <br>
-  <%= f.label :description, 'Description   ' %>
-  <br>
-  <%= f.text_area :description %>
-  <br>
-  <%= f.label :production_time, 'Production time   ' %>
-  <br>
-  <%= f.text_field :production_time %>
-  <br>
-  <%= f.label :excess_time, 'Excess time   ' %>
-  <br>
-  <%= f.datetime_select :excess_time, default: Time.now %>
-  <br>
-  <%= f.label :pick_time, 'Pick time   ' %>
-  <br>
-  <%= f.datetime_select :pick_time, default: Time.now %>
-  <br>
-  <br>
-  <%= f.submit %>
-  <%= link_to '取消', desserts_path, class: "btn btn-default" %>
-=======
-    <br>
->>>>>>> 23216cf539e2296c5b4b684f196007944ce83263
-
     <p><%= f.label :excess_time, '募資截止時間' %></p>
     <p><%= f.datetime_select :excess_time, default: Time.now %></p>
-
-    <br>
-
     <p><%= f.label :pick_time, '面交日期時間' %></p>
     <p><%= f.datetime_select :pick_time, default: Time.now %></p>
-
-    <br>
-
-    <%= f.submit %>
-    <%= link_to '取消', desserts_path, class: "btn btn-default" %>
+    <%= f.submit "建立",class: "button is-primary" %>
+    <%= link_to '取消', desserts_path, class: "button is-primary" %>
 
   <% end %>
 
 </div>
-
-
