--- a/app/views/desserts/index.html.erb
+++ b/app/views/desserts/index.html.erb
@@ -1,6 +1,7 @@
-
 <!DOCTYPE html>
 <html>
+
+<!-- ------------------------------------- Head ------------------------------------- -->
 
   <head>
     <title>CSS hover effects: Fade In Background opacity</title>
@@ -50,57 +51,59 @@
       opacity: 1
       }
     </style>
-
-
   </head>
 
-  <body>
+<!-- ------------------------------------- Body ------------------------------------- -->
+
+  <body>    
     <div class="main-dessert">
+    <!-- ----------------------------- Main container ----------------------------- -->
+      <nav class="level">
+
+        <!-- Left side -->
+        <div class="level-left">
+          <div class="level-item">
+            <div class="field has-addons">
+              <p class="control">
+                <input class="input" type="text" placeholder="Find a post">
+              </p>
+              <p class="control">
+                <button class="button">
+                  Search
+                </button>
+              </p>
+            </div>
+          </div>
+        </div><!-- level-left -->
+
+        <!-- Right side -->
+        <div class="level-right">
+          <!-- 待新增功能
+            <a class="btn btn-1">熱門</a>
+          -->
+
+          <a><%= link_to "全部甜點", root_path, class: "btn btn-2" %></a>
+          <% @categories.each do |category| %>
+            <a><%= link_to category.area, category_path(category), class: "btn btn-2" %></a>
+          <% end %>
+          <a><%= link_to '新募資', new_dessert_path, class: "btn btn-1" %></a>
+        </div>
+
+      </nav><!-- level -->
 
 
-        <!-- Main container -->
-<nav class="level">
-  <!-- Left side -->
-  <div class="level-left">
+      <div class= "container">
+        <div class="column is-narrow width: 200px;"></div>
+         
+        <div class="column ">
+          <hr>
+          <%= render partial: "shared/dessert_list" %>
+        </div>
 
-    <div class="level-item">
-      <div class="field has-addons">
-        <p class="control">
-          <input class="input" type="text" placeholder="Find a post">
-        </p>
-        <p class="control">
-          <button class="button">
-            Search
-          </button>
-        </p>
+        <div class="column is-narrow width: 200px;"></div>
       </div>
-    </div>
-  </div>
-
-  <!-- Right side -->
-  <div class="level-right">
-    <a class="btn btn-1">熱門</a>
-    <a><%= link_to "全部甜點", root_path, class: "btn btn-2" %></a>
-    <% @categories.each do |category| %>
-        <a><%= link_to category.area, category_path(category), class: "btn btn-2" %></a>
-      <% end %>
-    <a class="btn btn-1">新募資</a>
-  </div>
-</nav>
-   <div class= "container">
-   <div class="column is-narrow width: 200px;">
-   </div>
-   <div class="column ">
-    <HR>
-    <%= render partial: "shared/dessert_list" %>
-    </div>
-
-    <div class="column is-narrow width: 200px;">
-   </div>
-    </div>
-
-
-    </div>
+  
+    </div><!-- main-dessert -->
 
   </body>
 
