--- a/app/views/desserts/index.html.erb
+++ b/app/views/desserts/index.html.erb
@@ -60,21 +60,22 @@
     <!-- ----------------------------- Main container ----------------------------- -->
       <nav class="level">
 
-        <!-- Left side -->
-        <div class="level-left">
-          <div class="level-item">
-            <div class="field has-addons">
-              <p class="control">
-                <input class="input" type="text" placeholder="Find a post">
-              </p>
-              <p class="control">
-                <button class="button">
-                  Search
-                </button>
-              </p>
+        <!-- Left side 待新增功能 -->
+          <div class="level-left">
+            <div class="level-item">
+              <div class="field has-addons">
+                <p class="control">
+                  <input class="input" type="text" placeholder="Find a post">
+                </p>
+                <p class="control">
+                  <button class="button">
+                    Search
+                  </button>
+                </p>
+              </div>
             </div>
           </div>
-        </div><!-- level-left -->
+        <!-- Left side -->
 
         <!-- Right side -->
         <div class="level-right">
