--- a/app/views/desserts/show.html.erb
+++ b/app/views/desserts/show.html.erb
@@ -78,7 +78,8 @@
         <p>集資截止時間： <%= time_tag @dessert.excess_time %></p>
         <p>預定面交時間： <%= time_tag @dessert.pick_time %></p>
         <p>甜點介紹： <%= simple_format @dessert.description %></p>
-        <a class="button is-danger is-rounded is-large ">立即贊助</a>
+
+        <%= link_to '立即贊助', new_dessert_order_path(@dessert), class:"button is-danger is-rounded is-large" %>
 
         <p>
           <% if @dessert.time_up? && @dessert.sold_out? %>
