--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -2,7 +2,7 @@
 <ul>
   <% @users.each do |user| %>
   <li>
-    <%= image_tag user.avatar.url if user.avatar? %><br>
+    <%= image_tag user.avatar.url(:thumb) if user.avatar? %><br>
     Name: <%= user.name %><br>
     Email: <%= user.email %><br>
     Intro: <%= user.intro %><br>
