--- a/app/views/desserts/show.html.erb
+++ b/app/views/desserts/show.html.erb
@@ -79,8 +79,9 @@
         <p>預定面交時間： <%= time_tag @dessert.pick_time %></p>
         <p>甜點介紹： <%= simple_format @dessert.description %></p>
 
-
-
+        <button type="button" class="btn btn-warning">
+          <%= link_to '立即贊助', new_dessert_order_path(@dessert) %>
+        </button>
 
         <p>
           <% if @dessert.time_up? && @dessert.sold_out? %>
