--- a/app/views/desserts/index.html.erb
+++ b/app/views/desserts/index.html.erb
@@ -62,7 +62,7 @@
     <!-- ----------------------------- Main container ----------------------------- -->
       <nav class="level">
 
-        <!-- Left side 待新增功能 -->
+        <!-- Left side 待新增功能
           <div class="level-left">
             <div class="level-item">
               <div class="field has-addons">
@@ -77,7 +77,7 @@
               </div>
             </div>
           </div>
-        <!-- Left side -->
+        Left side 待新增功能 -->
 
         <!-- Right side -->
         <div class="level-right">
