show ig image on index and dessert show page

--- a/app/views/desserts/new.html.erb
+++ b/app/views/desserts/new.html.erb
@@ -176,7 +176,7 @@ border-radius: 5px; }
     <p><%= f.text_field :name %></p>
     <p><%= f.label :image, "甜點照片" %></p>
     <p><%= f.file_field :image %></p>
-    <p>或在此貼上甜點照片的ig網址</p>
+    <p>或在此貼上甜點照片的ig網址(請擇一)</p>
     <p><%= f.text_field :ig_image_url %></p>
     <p><%= f.label :price, '單價' %></p>
     <p><%= f.number_field :price %></p>
