show either dessert image or ig image on index page

--- a/app/views/shared/_dessert_list.html.erb
+++ b/app/views/shared/_dessert_list.html.erb
@@ -12,7 +12,7 @@
 
         <%= image_tag dessert.image_url(:thumb) if dessert.image? %>
 
-        <% if dessert.ig_image_url? %>
+        <% if !dessert.image? && dessert.ig_image_url? %>
           <% n = dessert.ig_image_url.split('/')[4] %>
           <%= image_tag image_url("https://instagram.com/p/#{n}/media/?size=m"), width: '250px' %>
         <% end %>
