add browserify-rails gem

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,11 +20,13 @@
 @import "orders";
 @import "replies";
 @import "css/style1.css";
+@import "style/helpers.css";
 @import "bulma";
+
+/*
 @import "bulma/sass/utilities/_all.sass";
 @import "bulma/sass/elements/button.sass";
 @import "bulma/sass/grid/columns.sass";
-@import "style/helpers.css";
 @import "bulma/sass/components/navbar.sass";
 @import "bulma/sass/components/level.sass";
 @import "bulma/sass/elements/_all.sass";
@@ -34,7 +36,7 @@
 @import "bulma/sass/elements/image.sass";
 @import "bulma/sass/grid/_all.sass";
 @import "bulma/sass/grid/tiles.sass";
-
+*/
 
 html{
   font-size:62.5%;
