--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,48 +4,51 @@
       <div class="tile is-parent is-vertical">
         <article class="tile is-child notification is-primary">
           <p class="title"></p>
-          <p class="subtitle"><% if @user == current_user %>
-          <%= link_to 'Edit', edit_user_path %>
-          <% end %>
-
-        </p>
-        <%= image_tag @user.avatar.url(:thumb) if @user.avatar? %>
-<h3><%= @user.name %></h3>
-
-<p><%= @user.email %></p>
-<p><%= simple_format @user.intro %></p>
-
+            <p class="subtitle">
+              <% if @user == current_user %>
+                <%= link_to 'Edit', edit_user_path %>
+              <% end %>
+            </p>
+          <%= image_tag @user.avatar.url(:thumb) if @user.avatar? %>
+          <h3><%= @user.name %></h3>
+          <p><%= @user.email %></p>
+          <p><%= simple_format @user.intro %></p>
         </article>
         <article class="tile is-child notification is-warning">
           <p class="title">...tiles</p>
           <p class="subtitle">Bottom tile</p>
-        <% if @user == current_user %>
-  <h5>給買家的話：</h5>
-  <p><%= simple_format @user.contact_info %></p>
-<% end %>
+            <% if @user == current_user %>
+              <h5>給買家的話：</h5>
+              <p><%= simple_format @user.contact_info %></p>
+            <% end %>
         </article>
       </div>
+
       <div class="tile is-parent">
         <article class="tile is-child notification is-info">
-          <p class="title"><h3>你贊助的甜點集資</h3>
-</p>
+          <p class="title">
+            <h3>你贊助的甜點集資</h3>
+          </p>
           <p class="subtitle">With an image</p>
           <figure class="image is-4by3">
             <% if @user == current_user %>
-  <% @orders.each do |order| %>
-    <%= link_to order_path(order) do %>
-      <%= image_tag order.dessert.image.url if order.dessert.image? %>
-      <h4><%= order.dessert.name %></h4>
-    <% end %>
-  <% end %>
-<% end %>
+              <% @orders.each do |order| %>
+                <%= link_to order_path(order) do %>
+                  <%= image_tag order.dessert.image.url if order.dessert.image? %>
+
+                  <% if !order.dessert.image? && order.dessert.ig_image_url? %>
+                    <% n = order.dessert.ig_image_url.split('/')[4] %>
+                    <%= image_tag image_url("https://instagram.com/p/#{n}/media/?size=m"), width: '250px' %>
+                  <% end %>
+                  <h4><%= order.dessert.name %></h4>
+                <% end %>
+              <% end %>
+            <% end %>
           </figure>
-
-
-
         </article>
       </div>
     </div>
+
     <div class="tile is-parent">
       <article class="tile is-child notification is-danger">
         <p class="title">Wide tile</p>
@@ -56,6 +59,7 @@
       </article>
     </div>
   </div>
+
   <div class="tile is-parent">
     <article class="tile is-child notification is-success">
       <div class="content">
@@ -64,16 +68,21 @@
         <div class="content">
           <!-- Content -->
           <% if @user == current_user %>
+          <% else %>
+            <h3><%= @user.name %>發起的甜點集資</h3>
+          <% end %>
+          
+          <% @desserts.each do |dessert| %>
+            <%= link_to dessert_path(dessert) do %>
+              <%= image_tag dessert.image_url(:thumb) if dessert.image? %>
 
-<% else %>
-  <h3><%= @user.name %>發起的甜點集資</h3>
-<% end %>
-<% @desserts.each do |dessert| %>
-  <%= link_to dessert_path(dessert) do %>
-    <%= image_tag dessert.image_url(:thumb) if dessert.image? %>
-    <h4><%= dessert.name %></h4>
-  <% end %>
-<% end %>
+              <% if !dessert.image? && dessert.ig_image_url? %>
+                <% n = dessert.ig_image_url.split('/')[4] %>
+                <%= image_tag image_url("https://instagram.com/p/#{n}/media/?size=m"), width: '250px' %>
+              <% end %>
+              <h4><%= dessert.name %></h4>
+            <% end %>
+          <% end %>
         </div>
       </div>
     </article>
