hide no function search box from category show page

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -55,7 +55,8 @@
     <nav class="level">
   <!-- Left side -->
   <div class="level-left">
-
+    
+    <!-- 待新增功能
     <div class="level-item">
       <div class="field has-addons">
         <p class="control">
@@ -68,6 +69,8 @@
         </p>
       </div>
     </div>
+    -->
+
   </div>
 
   <!-- Right side -->
