--- a/app/views/shared/_dessert.html.erb
+++ b/app/views/shared/_dessert.html.erb
@@ -6,6 +6,11 @@
 
         <figure class="image is-200x200 ">
           <%= image_tag dessert.image_url(:thumb) if dessert.image? %>
+
+          <% if !dessert.image? && dessert.ig_image_url? %>
+            <% n = dessert.ig_image_url.split('/')[4] %>
+            <%= image_tag image_url("https://instagram.com/p/#{n}/media/?size=m"), width: '250px' %>
+          <% end %>
         </figure>
 
       <% end %>
