--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -53,60 +52,59 @@
 
   <body>
     <nav class="level">
-  <!-- Left side -->
-  <div class="level-left">
-    
-    <!-- 待新增功能
-    <div class="level-item">
-      <div class="field has-addons">
-        <p class="control">
-          <input class="input" type="text" placeholder="Find a post">
-        </p>
-        <p class="control">
-          <button class="button">
-            Search
-          </button>
-        </p>
+
+      <!-- Left side 待新增功能
+      <div class="level-left">
+        
+        
+        <div class="level-item">
+          <div class="field has-addons">
+            <p class="control">
+              <input class="input" type="text" placeholder="Find a post">
+            </p>
+            <p class="control">
+              <button class="button">
+                Search
+              </button>
+            </p>
+          </div>
+        </div>
+
       </div>
+      Left side 待新增功能 -->
+
+      <!-- Right side -->
+      <div class="level-right">
+        <!--
+        <a class="btn btn-1">熱門</a>
+        -->
+        <a><%= link_to "全部甜點", root_path, class: "btn btn-2" %></a>
+        <% @categories.each do |category| %>
+          <a><%= link_to category.area, category_path(category), class: "btn btn-2" %></a>
+        <% end %>
+        <a><%= link_to "新募資", new_dessert_path, class: "btn btn-1" %></a>
+      </div>
+    </nav>
+   
+    <div class= "container">
+    <div class="column is-narrow width: 200px;">
     </div>
-    -->
-
-  </div>
-
-  <!-- Right side -->
-  <div class="level-right">
-    <a class="btn btn-1">熱門</a>
-    <a><%= link_to "全部甜點", root_path, class: "btn btn-2" %></a>
-    <% @categories.each do |category| %>
-        <a><%= link_to category.area, category_path(category), class: "btn btn-2" %></a>
-      <% end %>
-    <a><%= link_to "新募資", new_dessert_path, class: "btn btn-1" %></a>
-  </div>
-</nav>
-   <div class= "container">
-   <div class="column is-narrow width: 200px;">
-   </div>
-   <div class="column ">
+    <div class="column ">
     <HR>
     <%= render partial: "shared/dessert" %>
     </div>
 
     <div class="column is-narrow width: 200px;">
-   </div>
-   <section class="hero">
-  <div class="hero-body">
-
-
-        <div id="map" style='width: 600px; height: 300px;'>
-      </h1>
-
-  </div>
-</section>
     </div>
+    <section class="hero">
+    <div class="hero-body">
 
+    <div id="map" style='width: 600px; height: 300px;'>
+    </h1>
 
-
-
+    </div>
+    </section>
+    </div>
 
     <hr>
 
