--- a/app/views/desserts/show.html.erb
+++ b/app/views/desserts/show.html.erb
@@ -80,10 +80,12 @@
         <p>集資截止時間： <%= time_tag @dessert.excess_time %></p>
         <p>預定面交時間： <%= time_tag @dessert.pick_time %></p>
         <p>甜點介紹： <%= simple_format @dessert.description %></p>
-
-        <button type="button" class="btn btn-warning">
-          <%= link_to '立即贊助', new_dessert_order_path(@dessert) %>
-        </button>
+        
+        <% if current_user.id != @dessert.user.id %>
+          <button type="button" class="btn btn-warning">
+            <%= link_to '立即贊助', new_dessert_order_path(@dessert) %>
+          </button>
+        <% end %>
 
         <p>
           <% if @dessert.time_up? && @dessert.sold_out? %>
