--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -145,7 +145,7 @@ body {
 <div class="user">
 
 <%= form_for @user do |f| %>
-  <%= f.label :name, "Name" %>
+  <%= f.label :name, "暱稱" %>
   <br>
   <%= f.text_field :name %>
   <br>
@@ -162,8 +162,8 @@ body {
   <br>
   *注意：發起集資的賣家必填，此資訊只有自己和買家看得到*
   <br>
-  <%= f.submit %>
-  <%= link_to "Cancel", user_path(@user) %>
+  <%= f.submit '確認修改' %>
+  <%= link_to "取消", user_path(@user) %>
 <% end %>
  <hr>
 </div>
